@@ -64,6 +64,7 @@ class Ctx:
     self.bdb_txn_nosync = False
     self.fs_type = None
     self.symbol_strategy = None
+    self.symbol_strategy_default = 'strict'
     self.symbol_transforms = []
     self.svn_property_setters = []
 
